<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="250dp"
    android:layout_margin="8dp"
    android:padding="8dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        app:layout_constraintCircleRadius="5dp">

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorAccent"
            android:padding="2dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="bible" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:gravity="center|start"
            android:lines="2"
            android:maxLines="2"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:text="Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock" />

        <TextView
            android:id="@+id/tvJournalText"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:gravity="center|start"
            android:lines="3"
            android:maxLines="3"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toTopOf="@+id/tvCreatedOnDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:text="Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock" />

        <TextView
            android:id="@+id/tvCreatedOnDate"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toTopOf="@+id/tvCreatedOnTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintVertical_bias="1.0"
            tools:text="12 May 2018" />

        <TextView
            android:id="@+id/tvCreatedOnTime"
            android:layout_width="134dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Time"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/tvCreatedOnDate"
            app:layout_constraintStart_toStartOf="@+id/tvCreatedOnDate"
            tools:text="14:32" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/journal_item_selector"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/edit"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/journal_item_selector"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/share"
                app:srcCompat="@android:drawable/ic_menu_share" />

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/journal_item_selector"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/delete"
                app:srcCompat="@android:drawable/ic_menu_delete" />


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>